{
    "name": "Player",
    "maps": [
        {
            "name": "PlayerMain",
            "id": "9f99e495-475d-4288-908e-b38f3c619c6b",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "9e67e09e-c9bb-415b-93c2-76ec1146670f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b61cb459-13c4-4f17-9eff-bf7f0cda4a90",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}